FIX THE PADDING IN THE SECTION PROJECTS The link "visit site" was too close of bottom border.

--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,13 @@ padding-left: 300px;
 .works-p{
   text-align: center;
   margin: 0 35px 0 10px;
-  padding-top: 40px;
+  padding-top: 30px;
   padding-left: 455px;
   padding-right: 455px;
   font-size: 30px;
   background-color: #E5E5E5;
+  padding-bottom: 10px;
+
 }
 .works-p a{
 font-size: 20px;
@@ -126,13 +128,13 @@ font-size: 20px;
   padding: 56px 20px 20px 20px;
   color: #838383;
   text-decoration: underline;
-    width: 100%;
-   outline: none;
-   margin-bottom: 10px;
-   background: #FFFFFF;
-   border: 1px solid rgba(0, 0, 0, 0.25);
-   box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.35);
-   border-radius: 8px;
+  width: 100%;
+  outline: none;
+  margin-bottom: 10px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.35);
+  border-radius: 8px;
  }
  .contato_form textarea{
    display: block;
